# ClusterRendering

./: .tags  .tags_sorted_by_file  CMakeLists.txt  README.md  pracainz.sublime-project  pracainz.sublime-workspace  results.html
documentation/: Komendy-konfiguracja~
inputs/: BlackWhite2B.txt  BlackWhiteMovingLight2B.txt  changing_to_mirror.xml  enlargedboxes.xml  fewObjScene.xml  scena (kopia).txt  scena.txt  scena.xml  scene_second.xml
src/: main.cpp  scena.xml
src/Cluster/: Master.cpp  Master.hpp  Slave.cpp  Slave.hpp  WorkerObject.cpp  WorkerObject.hpp
src/Interface/: IObserver.hpp
src/Rendering/: Box.cpp  Box.hpp  Light.cpp  Light.hpp  MaterialObject.cpp  MaterialObject.hpp  Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  RayRenderer.cpp  RayRenderer.hpp  Raytracer.cpp  Raytracer.h  Scene.hpp  SceneFactory.cpp  SceneFactory.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/SqlModule/: SqlReader.cpp  SqlReader.hpp
src/Utils/: Client.cpp  Client.hpp  Context.h  DataDefs.hpp  FileManager.hpp  Frame.cpp  Frame.hpp  FramesManager.cpp  FramesManager.hpp  ImageCreator.cpp  ImageCreator.hpp  MovieCreator.cpp  MovieCreator.hpp  Part.cpp  Part.hpp  Task.hpp
src/XMLParser/: SceneReader.cpp  SceneReader.hpp  scene.cxx  scene.hxx  scene.xsd
